--- a/Application/Phone/View/Shop/goodsEdit.html
+++ b/Application/Phone/View/Shop/goodsEdit.html
@@ -18,7 +18,7 @@
 <body>
 <div class="page-group">
     <div class="page page-current">
-        <div class="content margin-top">
+        <div class="content">
             <div class="weui_cells_title">商品名称</div>
             <div class="weui_cells weui_cells_form">
                 <div class="weui_cell">
