--- a/Public/css/main.css
+++ b/Public/css/main.css
@@ -13,22 +13,76 @@
     color: #888;
     font-size: 14px;
 }
-
 @font-face {
     font-family: 'iconfont';
-    src: url('//at.alicdn.com/t/font_1456377813_5531275.eot'); /* IE9*/
-    src: url('//at.alicdn.com/t/font_1456377813_5531275.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('//at.alicdn.com/t/font_1456377813_5531275.woff') format('woff'), /* chrome、firefox */
-    url('//at.alicdn.com/t/font_1456377813_5531275.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-    url('//at.alicdn.com/t/font_1456377813_5531275.svg#iconfont') format('svg'); /* iOS 4.1- */
+    src: url('//at.alicdn.com/t/font_1456714774_3245919.eot'); /* IE9*/
+    src: url('//at.alicdn.com/t/font_1456714774_3245919.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('//at.alicdn.com/t/font_1456714774_3245919.woff') format('woff'), /* chrome、firefox */
+    url('//at.alicdn.com/t/font_1456714774_3245919.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+    url('//at.alicdn.com/t/font_1456714774_3245919.svg#iconfont') format('svg'); /* iOS 4.1- */
 }
+
 .green-text{color: #3cc51f;}
 
 
 .margin-top{margin-top: 30px;}
-.iconfont{font-family:"iconfont"; font-size:28px;font-style:normal;}
-.block{display: block;}
+.iconfont{font-family:"iconfont"; font-size:14px;font-style:normal;}
+.block{display: block;color: inherit;}
 .fl{float: left;}
 .fr{float: right;}
-.tip{color: #888888;display: block;text-align: center;font-size: 12px;}
-.extra_button{position: fixed;background: #3cc51f;font-size: 30px;width:50px;height:50px;border-radius: 50px;text-align: center;line-height: 50px;color: #fff;right: 30px;bottom: 50px;}
+.tip{color: #888888;display: block;text-align: center;font-size: 12px;padding: 10px 10px;}
+.extra_button{position: fixed;z-index: 5;background: #3cc51f;width:50px;height:50px;border-radius: 50px;text-align: center;line-height: 50px;color: #fff;right: 30px;bottom: 50px;}
+.extra_button .text{font-size: 16px;}
+.collection-header{width: 100%;height: 10rem;background: #333;color: #fff;padding: 20px;}
+.collection-header-img{width: 80px;margin-right: 10px;}
+.collection-header-info {}
+.collection-header-info > h3 {font-size: 16px;}
+.collection-header-info > p {margin: 5px 0;font-size: 12px; overflow: hidden;  text-overflow: ellipsis;  display: -webkit-box;  -webkit-box-orient: vertical;  -webkit-line-clamp: 3;}
+.effect-header{width: 100%;height: 8rem;background: #3cc51f;padding: 10px; color: #fff;}
+.effect-header-desc{text-align: center;font-size: 14px;}
+.effect-header-primary{text-align: center;font-size: 35px;margin: 0;}
+.effect-header-link{text-align: center;font-size: 12px;display: block;}
+
+
+.flex{
+    /* 设置弹性布局 */
+    display:-webkit-box;/* android 2.1-3.0, ios 3.2-4.3 */
+    display:-webkit-flex;/* Chrome 21+ */
+    display:-ms-flexbox;/* WP IE 10 */
+    display:flex;/* android 4.4 */
+}
+.flex-direction-column{
+    /* 设置弹性布局的方向，子元素按照在源文档中声明的顺序从上到下显示 */
+    -webkit-box-orient: vertical;/* android 2.1-3.0, ios 3.2-4.3 */
+    -webkit-flex-direction: column;/* Chrome 21+ */
+    -ms-flex-direction: column;/* WP IE 10 */
+    flex-direction: column;/* android 4.4 */
+}
+.flex-1{
+    /* 子元素自动占据剩余的空间 */
+    -webkit-box-flex:1;/* android 2.1-3.0, ios 3.2-4.3 */
+    -webkit-flex:1;/* Chrome 21+ */
+    -ms-flex:1;/* WP IE 10 */
+    flex:1;/* android 4.4 */
+}
+.flex-pack-center{
+    /* 水平布局下的子元素 水平居中 */
+    -webkit-box-pack: center;/* android 2.1-3.0, ios 3.2-4.3 */
+    -webkit-justify-content: center;/* Chrome 21+ */
+    -ms-flex-pack: center;/* WP IE 10 */
+    justify-content: center;/* android 4.4 */
+}
+.flex-align-center{
+    /* 水平布局下的子元素 垂直居中 */
+    -webkit-box-align: center;/* android 2.1-3.0, ios 3.2-4.3 */
+    -webkit-align-items: center;/* Chrome 21+ */
+    -ms-flex-align: center;/* WP IE 10 */
+    align-items: center;/* android 4.4 */
+}
+.flex-pack-justify{
+    /* 水平布局下的子元素 2端对齐 */
+    -webkit-box-pack: justify;/* android 2.1-3.0, ios 3.2-4.3 */
+    -webkit-justify-content: space-between;/* Chrome 21+ */
+    -ms-flex-pack: justify;/* WP IE 10 */
+    justify-content: space-between;/* android 4.4 */
+}
