--- a/Application/Phone/View/Public/message.html
+++ b/Application/Phone/View/Public/message.html
@@ -18,21 +18,39 @@
 <body>
 <div class="page-group">
     <div class="page page-current">
-        <div class="content margin-top">
-            <div class="weui_cells weui_cells_access">
-                <div class="weui_panel_hd"><span class="tip">您还没有收到信息</span></div>
-                <a class="weui_cell" href="{:UC('Public/messageDetail')}">
-                    <div class="weui_cell_bd weui_cell_primary">
-                        <p>欢迎使用我们的微信号</p>
-                    </div>
-                    <div class="weui_cell_ft green-text">未读</div>
-                </a>
-                <a class="weui_cell" href="javascript:;">
-                    <div class="weui_cell_bd weui_cell_primary">
-                        <p>我的小店今天总共有收获了500访问量，30个赞。</p>
-                    </div>
-                    <div class="weui_cell_ft">已读</div>
-                </a>
+        <div class="content">
+            <div class="content native-scroll">
+                <div class="content-block-title">我的消息</div>
+                <div class="list-block media-list">
+                    <ul>
+                        <li>
+                            <a href="#" class="item-link item-content">
+                                <div class="item-inner">
+                                    <div class="item-title-row">
+                                        <div class="item-title">每日汇报</div>
+                                        <div class="item-after">17:14</div>
+                                    </div>
+                                    <div class="item-subtitle green-text">未读</div>
+                                    <div class="item-text">此处是文本内容...</div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="item-link item-content">
+                                <div class="item-inner">
+                                    <div class="item-title-row">
+                                        <div class="item-title">每日汇报</div>
+                                        <div class="item-after">17:14</div>
+                                    </div>
+                                    <div class="item-subtitle">已读</div>
+                                    <div class="item-text">此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容</div>
+                                </div>
+                            </a>
+                        </li>
+
+
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
