--- a/Application/Phone/View/Shop/index.html
+++ b/Application/Phone/View/Shop/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
     <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
     <link rel="stylesheet" href="__PUBLIC__/css/weui.min.css?v=5">
-    <link rel="stylesheet" href="__PUBLIC__/css/main.css?v=12">
+    <link rel="stylesheet" href="__PUBLIC__/css/main.css?v=15">
 
 </head>
 <body>
@@ -45,7 +45,7 @@
                         店铺
                     </p>
                 </a>
-                <a href="javascript:;" class="weui_grid js_grid" data-id="cell">
+                <a href="{:UC('Shop/collection')}" class="weui_grid js_grid" data-id="cell">
                     <div class="weui_grid_icon">
                         <img src="__PUBLIC__/images/iconfont-ji.png" alt="">
                     </div>
@@ -53,15 +53,7 @@
                         妙集
                     </p>
                 </a>
-                <a href="javascript:;" class="weui_grid js_grid" data-id="msg">
-                    <div class="weui_grid_icon">
-                        <img src="__PUBLIC__/images/iconfont-renwu.png" alt="">
-                    </div>
-                    <p class="weui_grid_label">
-                        任务
-                    </p>
-                </a>
-                <a href="javascript:;" class="weui_grid js_grid" data-id="progress">
+                <a href="{:UC('Shop/effect')}" class="weui_grid js_grid" data-id="progress">
                     <div class="weui_grid_icon">
                         <img src="__PUBLIC__/images/iconfont-jifen.png" alt="">
                     </div>
@@ -69,15 +61,7 @@
                         影响
                     </p>
                 </a>
-                <a href="javascript:;" class="weui_grid js_grid" data-id="actionsheet">
-                    <div class="weui_grid_icon">
-                        <img src="__PUBLIC__/images/iconfont-unie677.png" alt="">
-                    </div>
-                    <p class="weui_grid_label">
-                        广告
-                    </p>
-                </a>
-                <a href="javascript:;" class="weui_grid js_grid" data-id="icons">
+                <a href="{:UC('Shop/fans')}" class="weui_grid js_grid" data-id="icons">
                     <div class="weui_grid_icon">
                         <img src="__PUBLIC__/images/iconfont-11guanzhufensi.png" alt="">
                     </div>
@@ -93,14 +77,6 @@
                         消息
                     </p>
                 </a>
-                <a href="javascript:;" class="weui_grid js_grid" data-id="article">
-                    <div class="weui_grid_icon">
-                        <img src="__PUBLIC__/images/iconfont-shezhi.png" alt="">
-                    </div>
-                    <p class="weui_grid_label">
-                        设置
-                    </p>
-                </a>
             </div>
         </div>
 
@@ -111,39 +87,7 @@
 <script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
+<script type='text/javascript' src="__PUBLIC__/js/main.js?v=1" charset='utf-8'></script>
 
-<script>
-    $(document).on('click','#showActionBtn', function () {
-        var buttons1 = [
-            {
-                text: '请选择',
-                label: true
-            },
-            {
-                text: '添加商品',
-                onClick: function() {
-                    $.alert("你选择了“买入“");
-                }
-            },
-            {
-                text: '删除商品',
-                bold: true,
-                color: 'danger',
-                onClick: function() {
-                    $.alert("你选择了“卖出“");
-                }
-            }
-        ];
-        var buttons2 = [
-            {
-                text: '取消',
-                bg: 'danger'
-            }
-        ];
-        var groups = [buttons1, buttons2];
-        $.actions(groups);
-    });
-    $.init()
-</script>
 </body>
 </html>
