--- a/Application/Phone/View/Index/goodsdetail.html
+++ b/Application/Phone/View/Index/goodsdetail.html
@@ -19,111 +19,53 @@
 <div class="page-group">
     <div class="page page-current" id="collection-info">
         <div class="content">
-            <div class="banner-header">
-                <div class="flex">
-                    <div class="banner-header-imgbox">
-                        <img src="__PUBLIC__/images/head.jpg">
-                    </div>
-
-                    <div class="banner-header-infobox flex-1">
-                        <h3 class="info-title">美人鱼美人鱼美人鱼</h3>
-                        <p class="info gray-text">100人想买 | 20人收藏</p>
-                        <p class="info">我们对页面的基本结构是有要求的，否则可能会出现样式错误或者无法正确加载页面等问题。我们对页面的基本结构是有要求的，否则可能会出现样式错误或者无法正确加载页面等问题。</p>
-
-                    </div>
+            <div class="swiper-container swiper-container-horizontal" data-space-between="10">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide swiper-slide-active" style="width: 320px; margin-right: 10px;"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i1/TB1n3rZHFXXXXX9XFXXXXXXXXXX_!!0-item_pic.jpg_640x640q60.jpg" alt="" style="width: 100%"></div>
+                    <div class="swiper-slide swiper-slide-next" style="width: 320px; margin-right: 10px;"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i4/TB10rkPGVXXXXXGapXXXXXXXXXX_!!0-item_pic.jpg_640x640q60.jpg" alt="" style="width: 100%"></div>
+                    <div class="swiper-slide" style="width: 320px; margin-right: 10px;"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i1/TB1kQI3HpXXXXbSXFXXXXXXXXXX_!!0-item_pic.jpg_640x640q60.jpg" alt="" style="width: 100%"></div>
                 </div>
+                <div class="swiper-pagination"><span class="swiper-pagination-bullet swiper-pagination-bullet-active"></span><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet"></span></div>
+            </div>
 
-                <div class="flex">
-                    <div class="pricebox"><span class="red-text">￥50</span></div>
-                    <div class="flex-1">
-                        <div class="buttons-row greenbg">
-                            <a href="#" class="button button-round button-success">收藏</a>
-                            <a href="#" class="button  button-round ">想买</a>
-                        </div>
-                    </div>
+            <div class="row content-block">
+                <div class="col-33">
+                    <a href="javascript:;" class="weui_btn weui_btn_primary">想买</a>
+                </div>
+                <div class="col-33">
+                    <a href="javascript:;" class="weui_btn weui_btn_warn">收藏</a>
+                </div>
+                <div class="col-33">
+                    <a href="javascript:;" class="weui_btn weui_btn_primary">分享</a>
                 </div>
             </div>
 
-            <div class="weui_btn_area">
-                <a class="weui_btn weui_btn_primary" href="javascript:" id="showTooltips">查看详情</a>
+            <div class="card">
+                <div class="card-content">
+                    <div class="list-block">
+                        <ul>
+                            <li class="item-content">
+                                <div class="item-inner">
+                                    <div class="item-title">东门口何玲米粽</div>
+                                </div>
+                            </li>
+                            <li class="item-content">
+                                <div class="item-inner">
+                                    <span class="green-text big-text">
+                                        <small class="gray-text small-text">市面价：</small>
+                                        ￥5
+                                    </span>
+                                    <small class="gray-text small-text fr">500人收藏 | 40人想买</small>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
             <div class="card">
-                <div class="card-header">商品说明</div>
                 <div class="card-content">
-                    <div class="card-content-inner">头和尾的卡片。卡头是用来显示一些额外的信息，或自定义操作卡标题和页脚。头和尾的卡片。卡头是用来显示一些额外的信息，或自定义操作卡标题和页脚。头和尾的卡片。卡头是用来显示一些额外的信息，或自定义操作卡标题和页脚。</div>
+                    <div class="card-content-inner">这是一个用纯文本的简单卡片。但卡片可以包含自己的页头，页脚，列表视图，图像，和里面的任何元素。</div>
                 </div>
-            </div>
-
-            <div class="content-block-title">商品列表</div>
-            <div class="list-block media-list">
-                <ul>
-                    <li>
-                        <a href="#" class="item-link item-content">
-                            <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="80"></div>
-                            <div class="item-inner">
-                                <div class="item-title-row">
-                                    <div class="item-title">臭豆腐</div>
-                                    <div class="item-after">$15</div>
-                                </div>
-                                <div class="item-subtitle" style="font-size: 12px;">by 夜声旗舰店</div>
-                                <div class="item-text">此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容</div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="item-link item-content">
-                            <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="80"></div>
-                            <div class="item-inner">
-                                <div class="item-title-row">
-                                    <div class="item-title">臭豆腐</div>
-                                    <div class="item-after">$15</div>
-                                </div>
-                                <div class="item-subtitle" style="font-size: 12px;">by 夜声旗舰店</div>
-                                <div class="item-text">此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容</div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="item-link item-content">
-                            <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="80"></div>
-                            <div class="item-inner">
-                                <div class="item-title-row">
-                                    <div class="item-title">臭豆腐</div>
-                                    <div class="item-after">$15</div>
-                                </div>
-                                <div class="item-subtitle" style="font-size: 12px;">by 夜声旗舰店</div>
-                                <div class="item-text">此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容</div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="item-link item-content">
-                            <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="80"></div>
-                            <div class="item-inner">
-                                <div class="item-title-row">
-                                    <div class="item-title">臭豆腐</div>
-                                    <div class="item-after">$15</div>
-                                </div>
-                                <div class="item-subtitle" style="font-size: 12px;">by 夜声旗舰店</div>
-                                <div class="item-text">此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容</div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="item-link item-content">
-                            <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="80"></div>
-                            <div class="item-inner">
-                                <div class="item-title-row">
-                                    <div class="item-title">臭豆腐</div>
-                                    <div class="item-after">$15</div>
-                                </div>
-                                <div class="item-subtitle" style="font-size: 12px;">by 夜声旗舰店</div>
-                                <div class="item-text">此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容</div>
-                            </div>
-                        </a>
-                    </li>
-
-                </ul>
             </div>
         </div>
     </div>
@@ -132,6 +74,7 @@
 <script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
+
 <script type='text/javascript' src="__PUBLIC__/js/main.js" charset='utf-8'></script>
 
 </body>
