--- a/Application/Phone/View/User/mycollection.html
+++ b/Application/Phone/View/User/mycollection.html
@@ -1,70 +1,95 @@
-<extend name="template/main" />
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>我的生活</title>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-<block name="css">
-    <link rel="stylesheet" href="__PUBLIC__/css/swiper.min.css">
-    <style>
-        .swiper-pagination-bullet-active{background: red;}
-    </style>
-</block>
+    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
+    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/weui.min.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/main.css?v=4">
 
-<block name="script">
-    <script src="__PUBLIC__/js/swiper.min.js"></script>
-    <script>
-    </script>
-</block>
+</head>
+<body>
+<div class="page-group">
+    <div class="page page-current" id="collection-page">
+        <div class="content">
+            <!--<span class="tip">您的妙集空空如也，点击右下角新建一个吧</span>-->
+            <div class="content native-scroll">
+                <div class="content-block-title">我的妙集</div>
+                <div class="list-block media-list">
+                    <ul>
+                        <li>
+                            <a href="{:UC('Shop/collectionInfo')}" class="item-link item-content">
+                                <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="80"></div>
+                                <div class="item-inner">
+                                    <div class="item-title-row">
+                                        <div class="item-title">秋香螺丝粉套餐</div>
+                                        <div class="item-after">￥15</div>
+                                    </div>
+                                    <div class="item-subtitle">50赞 | 10收藏</div>
+                                    <div class="item-text">此处是文本内容...</div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{:UC('Shop/collectionInfo')}" class="item-link item-content">
+                                <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="80"></div>
+                                <div class="item-inner">
+                                    <div class="item-title-row">
+                                        <div class="item-title">秋香螺丝粉套餐</div>
+                                        <div class="item-after">￥15</div>
+                                    </div>
+                                    <div class="item-subtitle">50赞 | 10收藏</div>
+                                    <div class="item-text">此处是文本内容...</div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{:UC('Shop/collectionInfo')}" class="item-link item-content">
+                                <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="80"></div>
+                                <div class="item-inner">
+                                    <div class="item-title-row">
+                                        <div class="item-title">秋香螺丝粉套餐</div>
+                                        <div class="item-after">￥15</div>
+                                    </div>
+                                    <div class="item-subtitle">50赞 | 10收藏</div>
+                                    <div class="item-text">此处是文本内容...</div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{:UC('Shop/collectionInfo')}" class="item-link item-content">
+                                <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="80"></div>
+                                <div class="item-inner">
+                                    <div class="item-title-row">
+                                        <div class="item-title">秋香螺丝粉套餐</div>
+                                        <div class="item-after">￥15</div>
+                                    </div>
+                                    <div class="item-subtitle">50赞 | 10收藏</div>
+                                    <div class="item-text">此处是文本内容...</div>
+                                </div>
+                            </a>
+                        </li>
 
-<block name="content">
-    <div class="topnavbar flex flex-align-center">
-        <a href="javascript:" class="backbtn" onclick="window.history.back();">
-            <i class="iconfont">&#xe612;</i>
-        </a>
-        <div class="pagetitle flex-1">我的收藏</div>
-        <a href="#" class="rightbtn">
-            <i class="iconfont">&#xe619;</i>
-        </a>
-    </div>
-
-    <div class="main-container">
-
-        <div class="panel box">
-            <div class="list">
-                <span class="nocontent">您还没有收藏，请<a href="#">点击这里</a>试试吧</span>
-
-                <a class="item flex flex-align-center" href="{:UC('Index/groupinfo')}">
-                    <img src="__PUBLIC__/images/head.jpg" class="item-img">
-                    <div class="item-info flex-1">
-                        <h3>新春大红包</h3>
-                        <p class="group-good-price">已经有<strong>10人</strong>联系卖家了</p>
-                        <p class="desc">收藏时间：2016-01-01</p>
-                    </div>
-                </a>
-                <a class="item flex flex-align-center" href="{:UC('Index/groupinfo')}">
-                    <img src="__PUBLIC__/images/head.jpg" class="item-img">
-                    <div class="item-info flex-1">
-                        <h3>新春大红包</h3>
-                        <p class="group-good-price">已经有<strong>10人</strong>联系卖家了</p>
-                        <p class="desc">收藏时间：2016-01-01</p>
-                    </div>
-                </a>
-                <a class="item flex flex-align-center" href="{:UC('Index/groupinfo')}">
-                    <img src="__PUBLIC__/images/head.jpg" class="item-img">
-                    <div class="item-info flex-1">
-                        <h3>新春大红包</h3>
-                        <p class="group-good-price">已经有<strong>10人</strong>联系卖家了</p>
-                        <p class="desc">收藏时间：2016-01-01</p>
-                    </div>
-                </a>
-                <a class="item flex flex-align-center" href="{:UC('Index/groupinfo')}">
-                    <img src="__PUBLIC__/images/head.jpg" class="item-img">
-                    <div class="item-info flex-1">
-                        <h3>新春大红包</h3>
-                        <p class="group-good-price">已经有<strong>10人</strong>联系卖家了</p>
-                        <p class="desc">收藏时间：2016-01-01</p>
-                    </div>
-                </a>
+                    </ul>
+                </div>
             </div>
+            <a href="javascript:;" class="extra_button" id="showActionBtn"><i class="iconfont text">&#xe601;</i></a>
+
         </div>
-
-
     </div>
-</block>
+</div>
+
+<script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
+<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
+<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
+<script type='text/javascript' src="__PUBLIC__/js/main.js" charset='utf-8'></script>
+
+</body>
+</html>
