完成静态页面

--- a/Application/Phone/View/Index/collection.html
+++ b/Application/Phone/View/Index/collection.html
@@ -26,22 +26,16 @@
                     </div>
 
                     <div class="banner-header-infobox flex-1">
-                        <h3 class="info-title">美人鱼美人鱼美人鱼</h3>
-                        <p class="info gray-text">100人想买 | 20人收藏</p>
-                        <p class="info">我们对页面的基本结构是有要求的，否则可能会出现样式错误或者无法正确加载页面等问题。我们对页面的基本结构是有要求的，否则可能会出现样式错误或者无法正确加载页面等问题。</p>
-
-                    </div>
-                </div>
-
-                <div class="flex">
-                    <div class="pricebox"><span class="red-text">￥50</span></div>
-                    <div class="flex-1">
+                        <h3 class="info-title text-line2">美人鱼美人鱼美人鱼美人鱼美人鱼美人鱼美人鱼美人鱼美人鱼</h3>
+                        <p class="info green-text big-text"><span class="small-text gray-text">市场价:</span>￥50</p>
                         <div class="buttons-row greenbg">
-                            <a href="#" class="button button-round button-success">收藏</a>
-                            <a href="#" class="button  button-round ">想买</a>
+                            <a href="#" class="button button-round button-success">收藏(50)</a>
+                            <a href="#" class="button  button-round ">想买(100)</a>
                         </div>
                     </div>
                 </div>
+
+
             </div>
 
             <div class="weui_btn_area">
