--- a/Application/Phone/View/Public/message.html
+++ b/Application/Phone/View/Public/message.html
@@ -24,7 +24,7 @@
                 <div class="list-block media-list">
                     <ul>
                         <li>
-                            <a href="#" class="item-link item-content">
+                            <a href="{:UC('Public/messageDetail')}" class="item-link item-content">
                                 <div class="item-inner">
                                     <div class="item-title-row">
                                         <div class="item-title">每日汇报</div>
@@ -36,7 +36,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="item-link item-content">
+                            <a href="{:UC('Public/messageDetail')}" class="item-link item-content">
                                 <div class="item-inner">
                                     <div class="item-title-row">
                                         <div class="item-title">每日汇报</div>
