一些小改动

--- a/Application/Phone/View/Index/publishNeed.html
+++ b/Application/Phone/View/Index/publishNeed.html
@@ -88,7 +88,7 @@
 
             </div>
 
-            <a href="javascript:;" class="extra_button" id="showActionBtn" style="font-size: 35px;">+</a>
+            <a href="javascript:;" class="extra_button" id="showActionBtn">发布</a>
         </div>
         <div style="height: 50px;"></div>
     </div>
