--- a/Application/Phone/View/Shop/shopDetail.html
+++ b/Application/Phone/View/Shop/shopDetail.html
@@ -44,8 +44,18 @@
                     <div class="weui_cell_bd weui_cell_primary">
                         <p>在店铺内进行定位</p>
                     </div>
-                    <div class="weui_cell_ft">说明文字</div>
+                    <div class="weui_cell_ft">重新定位</div>
                 </a>
+            </div>
+
+            <div class="weui_cells_title">店铺简介</div>
+            <div class="weui_cells weui_cells_form">
+                <div class="weui_cell">
+                    <div class="weui_cell_bd weui_cell_primary">
+                        <textarea class="weui_textarea" placeholder="请店铺简介" rows="3"></textarea>
+                        <div class="weui_textarea_counter"><span>0</span>/200</div>
+                    </div>
+                </div>
             </div>
 
 
