--- a/Application/Phone/View/Shop/shopDetail.html
+++ b/Application/Phone/View/Shop/shopDetail.html
@@ -28,6 +28,15 @@
                 </div>
             </div>
 
+            <div class="weui_cells_title">联系电话</div>
+            <div class="weui_cells weui_cells_form">
+                <div class="weui_cell">
+                    <div class="weui_cell_bd weui_cell_primary">
+                        <input class="weui_input" type="number" pattern="[0-9]*" placeholder="请输入您的联系电话">
+                    </div>
+                </div>
+            </div>
+
             <div class="weui_cells_title">店铺地址</div>
             <div class="weui_cells weui_cells_form">
                 <div class="weui_cell">
