消息管理和粉丝管理

--- a/Application/Phone/View/Shop/fans.html
+++ b/Application/Phone/View/Shop/fans.html
@@ -24,6 +24,7 @@
                 <div class="content-block-title">我的粉丝</div>
                 <div class="list-block media-list inset">
                     <ul>
+                        <!--
                         <li>
                             <a href="{:UC('Shop/fanslist')}" class="item-link item-content">
                                 <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="44"></div>
@@ -35,12 +36,13 @@
                                 </div>
                             </a>
                         </li>
+                        -->
                         <li>
                             <a href="{:UC('Shop/fansCollect')}" class="item-link item-content">
                                 <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="44"></div>
                                 <div class="item-inner">
                                     <div class="item-title-row">
-                                        <div class="item-title">收藏我的</div>
+                                        <div class="item-title">喜欢我的</div>
                                     </div>
                                     <div class="item-subtitle">3未读</div>
                                 </div>
